# dhmem

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FILES  README.md  docker.env.sh  go.sh  spack.yaml
cmake/: FindDecaf.cmake  FindHenson.cmake  patch-henson.patch
demo/: CMakeLists.txt
demo/src/: evaluate.cpp  steer.cpp  visualize.cpp
dhmem/: CMakeLists.txt
dhmem/include/dhmem/: .dhmem.h.swp  dhmem.h
dhmem/include/dhmem/support/: decaf.h  decaf.h~  henson.h
dhmem/src/: dhmem.cpp
examples/: CMakeLists.txt
examples/decaf_newtons_method/: CMakeLists.txt  decaf-henson.json  evaluate.cpp  patch-decaf.patch
examples/decaf_newtons_method/src/: evaluate.cpp  steer.cpp  visualize.cpp
examples/henson_newtons_method/: CMakeLists.txt  dhmem.hwl
examples/henson_newtons_method/src/: evaluate.cpp  steer.cpp  visualize.cpp
examples/newtons_method/: CMakeLists.txt
examples/newtons_method/src/: common.h  evaluate.cpp  steer.cpp  visualize.cpp
perf/: CMakeLists.txt
perf/synthetic/: CMakeLists.txt
perf/synthetic/synthetic_dhmem/: CMakeLists.txt  definitions.txt  generate.py  results.txt  runtest.sh
perf/synthetic/synthetic_dhmem/src/: synthetic_dhmem.cpp
perf/throughput/: CMakeLists.txt
perf/throughput/throughput_dhmem/: CMakeLists.txt
perf/throughput/throughput_dhmem/src/: throughput_dhmem.cpp
